--- a/style.css
+++ b/style.css
@@ -33,43 +33,79 @@ ul li a{
 }
 
 
-.textbook1{ 
-    line-height: 1;
 
+
+
+
+
+
+.container1{
+    margin: 42px 0px 32px 20px;
+    overflow-x: hidden;
+    display: flex;
+}
+
+
+.textbook1{ 
+    z-index: 1;
+    line-height: 1;
 }
 
 h4{
     color: rgb(255, 78, 178);
-    font-weight: 400; 
+    font-weight: 400;
+    font-size: 12px;
 }
-
-.headline{
+p.headline{
+    margin: 0 0 0 0;
     color: black;
     font-weight: 800;
-    font-size: 30px;
+    font-size: 35px;
 }
 
-p{
+p.missout{
     font-weight:200;
     color: rgb(70, 70, 70);
+    font-size: 12px;
 }
 
 .illustration{
     height: 300px;
-}
+    z-index: -1;
+    position:static;
+}  
+
+
+
+
+
+
+
+
 
 .middle{
     border-radius: 25px;
     height: 200px;
+    padding: 20px;
+    line-height: 1;
+
     background-image: url(assets/background.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
     
 }
+
 .banner{
     font-size: 30px;
 }
+.bannertext{
+    font-size: 12px;
+}
+
+
+
 
 
 
@@ -81,6 +117,7 @@ p{
         border-radius: 0%;
 
     }
+    
   }
 
 @media (min-width:896px) {
@@ -89,6 +126,10 @@ p{
     }
     .logo{
         margin: 35px;
+    }
+    .illustration{
+        height: 500px;
+        position:relative;
     }
     
 
