--- a/style.css
+++ b/style.css
@@ -75,14 +75,6 @@ p.missout{
     position:static;
 }  
 
-
-
-
-
-
-
-
-
 .middle{
     border-radius: 25px;
     height: 200px;
@@ -109,7 +101,9 @@ p.missout{
     margin: 20px 0 0 0;
     padding: 20px;
     max-width: 896px;
-
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 
 }
 img.brands{
@@ -117,13 +111,17 @@ img.brands{
 }
 
 h3{
+    margin: 0 0 0 15px;
     font-size: 30px;
     font-weight: 400;
 }
 .we{
+    margin: 0 0 0 15px;
     color: rgb(98, 98, 98);
 }
+
 .nfts{
+    margin: 20px 0 50px 0;
     overflow-x: hidden;
     display: flex;
     align-items: center;
@@ -148,6 +146,42 @@ h3{
     font-weight: 300;
 }
 
+.container2{
+    margin: 70px 0px 32px 20px;
+    overflow-x: hidden;
+    display: flex;
+}
+
+
+.textbook1{ 
+    z-index: 1;
+    line-height: 1;
+}
+
+h4{
+    color: rgb(255, 78, 178);
+    font-weight: 400;
+    font-size: 12px;
+}
+p.headline{
+    margin: 0 0 0 0;
+    color: black;
+    font-weight: 800;
+    font-size: 35px;
+}
+
+p.missout{
+    font-weight:200;
+    color: rgb(70, 70, 70);
+    font-size: 12px;
+}
+
+.illustration2{
+    z-index: -1;
+    position:static;
+   
+}  
+
 
 @media (max-width: 896px) {
     .menu {
@@ -157,7 +191,6 @@ h3{
         border-radius: 0%;
 
     }
-    
   }
 
 @media (min-width:896px) {
@@ -167,12 +200,30 @@ h3{
     .logo{
         margin: 35px;
     }
+    .container1{
+        justify-content: space-around;
+    }
     .illustration{
         height: 500px;
         position:relative;
     }
+    .middle{
+        margin: 30px 30px 30px 30px;
+    }
+    .brands{
+        
+        margin: 50px 30px 30px 50px;
+        padding: 40px;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+   
+    }
     .nfts{
         justify-content: space-between;
     }
+    .container2{
+        justify-content: space-between;
+    }
 
-}
+
